Feature : Attendance Scraper

--- a/module/scraper/absensi/.env
+++ b/module/scraper/absensi/.env
@@ -1,8 +1,7 @@
-EMAIL=radit@student.uns.ac.id
-PASSWORD=Raditya@123
-LATITUDE=7.531919
-LONGITUDE=-110.902743
+EMAIL=
+PASSWORD=
+LATITUDE=
+LONGITUDE=
 
-//inspect pas mau submit absensi , ctrl + u
 //paste value let idMhs = (ex : 312659)
-IDMAHASISWA=312659
+IDMAHASISWA=
